--- a/src/app/setup/page.module.scss
+++ b/src/app/setup/page.module.scss
@@ -6,3 +6,10 @@
   justify-content: center;
   align-items: center;
 }
+
+:global(#app) {
+  .button {
+    font-size: 2rem;
+    height: auto;
+  }
+}
